--- a/Movie Guesser/style.css
+++ b/Movie Guesser/style.css
@@ -40,4 +40,12 @@ body {
     text-align: center;
     width: 500px;
     height: 300px;
+
+}
+
+#footer{
+
+    color: white;
+    text-align: center;
+
 }
