--- a/Movie Guesser/style.css
+++ b/Movie Guesser/style.css
@@ -1,7 +1,19 @@
+@charset "UTF-8";
+
 #header {
 
     text-align: top;
     color: white;
+
+}
+
+#header a{
+
+    display: block;
+    text-align: center;
+    color : white;
+    text-decoration: none;
+    font-size: 50px;
 
 }
 
@@ -24,6 +36,7 @@ body {
     width: 700px;
     height: 400px;
     border: 1px solid white;
+    margin-bottom: 50px;
 
 }
 
@@ -49,3 +62,4 @@ body {
     text-align: center;
 
 }
+
